update docker-compose to update the server when codes change

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,3 +5,12 @@ services:
     container_name: web
     ports:
       - '3000:3000'
+    volumes:
+      - ./nftProject-front:/app
+    develop:
+      watch:
+        - action: sync
+          path: .
+          target: /app
+    environment:
+      - WATCHPACK_POLLING=true
