--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: "3.8"
 services:
   frontend:
     build: ./nftProject-front
@@ -14,3 +13,28 @@ services:
           target: /app
     environment:
       - WATCHPACK_POLLING=true
+  backend:
+    build: ./nftProject-backend
+    command: node --inspect=0.0.0.0:9229 index.js  # Enable debugging on port 9229
+    ports:
+      - "5000:5000"
+      - "9229:9229"
+    volumes:
+      - ./nftproject-backend:/usr/src/app
+    develop:
+      watch:
+        - action: sync
+          path: .
+          target: /usr/src/app
+    environment:
+      - MONGO_URI=mongodb://mongo:27017/nft-db
+      - WATCHPACK_POLLING=true
+    depends_on:
+      - mongo
+
+  mongo:
+    image: mongo:latest
+    ports:
+      - "27017:27017"
+    volumes:
+      - ./data/db:/data/db
